Codes/nohup.out
python: can't open file 'noise_injection_af_EMD': [Errno 2] No such file or directory
/home/ec2-user/anaconda3/envs/tensorflow_p27/lib/python2.7/site-packages/scipy/stats/stats.py:3010: RuntimeWarning: invalid value encountered in double_scalars
  r = r_num / r_den
sensor5
1
1
2
1
3
1
4
1
5
2
6
2
7
2
8
2
9
3
10
3
11
3
12
3
13
4
14
4
15
4
16
4
17
5
18
5
19
5
20
5
21
6
22
6
23
6
24
6
sensor6
25
1
26
1
27
1
28
1
29
2
30
2
31
2
32
2
33
3
34
3
35
3
36
3
37
4
38
4
39
4
40
4
41
5
42
5
43
5
44
5
45
6
46
6
47
6
48
6
sensor7
49
1
50
1
51
1
52
1
53
2
54
2
55
2
56
2
57
3
58
3
59
3
60
3
61
4
62
4
63
4
64
4
65
5
66
5
67
5
68
5
69
6
70
6
71
6
72
6
sensor8
73
1
Traceback (most recent call last):
  File "noise_injection_af_EMD.py", line 102, in <module>
    df.to_csv('/home/ec2-user/noise_af_EMD/BV/spike_6hours_3/sensor'+str(sensor)+'/' + file_name)
  File "/home/ec2-user/anaconda3/envs/tensorflow_p27/lib/python2.7/site-packages/pandas/core/generic.py", line 3020, in to_csv
    formatter.save()
  File "/home/ec2-user/anaconda3/envs/tensorflow_p27/lib/python2.7/site-packages/pandas/io/formats/csvs.py", line 157, in save
    compression=self.compression)
  File "/home/ec2-user/anaconda3/envs/tensorflow_p27/lib/python2.7/site-packages/pandas/io/common.py", line 421, in _get_handle
    f = open(path_or_buf, mode)
IOError: [Errno 2] No such file or directory: '/home/ec2-user/noise_af_EMD/BV/spike_6hours_3/sensor8/BV_Rice_sensor_8spike_6hours_31_range2_timebin0.csv'
  File "noise_injection_af_EMD.py", line 88
    print 'sensor' + str(sensor)
                 ^
SyntaxError: invalid syntax
